<resources>
    <string name="app_name">mobile-labs</string>
    <string-array name="authors">
        <item>Jorge Orwell</item>
        <item>Rey Bradbury</item>
        <item>Aizek Asimov</item>
        <item>Oldos Haksli</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="from_1900_to_1950">1900–1950</string>
    <string name="from_1950_to_2000">1950–2000</string>
    <string name="output_template">You\'ve picked %1$s and %2$s</string>
    <string name="output_template_file">%1$s:%2$s</string>
    <string name="show_answers">show answers</string>
    <string name="title_activity_answers">Answers</string>
    <string name="author">Author</string>
    <string name="years">Years</string>
    <string name="clear_answers">clear answers</string>
</resources>