<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnswersActivity"
    android:padding="50dp">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_max="500dp">
        <TableLayout
            android:id="@+id/answers_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:stretchColumns="*">
            <TableRow>
                <TextView
                    android:text="@string/author"
                    android:gravity="center"
                    android:padding="3dp" />
                <TextView
                    android:text="@string/years"
                    android:gravity="center"
                    android:padding="3dp" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/clear_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view"
        android:layout_marginVertical="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>